# Assessment

Informatik/: test_prep.py  text_file.txt
Informatik/Algo/: algorithms.py  binsearch.py  circle.py  sortieren.py  sorting.py  turtle_random_movement.py  turtlecircle.py  turtlerace.py  turtletest.py
Informatik/E1/: hello_pycharm.py
Informatik/E10/: base64_decoder.py  base64_encoder.py  task_1.py  task_1_test.py
Informatik/E11/: game.py
Informatik/E2/: task_1.py  task_2_a.py  task_2_b.py
Informatik/E3/: task_1.py  task_2.py  task_3.py  task_4.py
Informatik/E4/: README.md  lorem-ipsum.txt  recursion_detector.py  task_1.py  task_1_test.py  task_2.py  task_2_test.py  task_3.py  task_3_test.py  task_4.py  task_4_test.py  testfile.py
Informatik/E5/: dognames.csv  task_1.py  task_1_test.py  task_2.py  task_2_test.py
Informatik/E6/: task_1.py  task_1_test.py  task_2.py  task_2_test.py  task_3.py  task_3_test.py  task_4.py  task_4_test.py
Informatik/E7/: task_1.py  task_1_test.py  task_2.py
Informatik/E8/: task_1.py  task_2.py
Informatik/E9/: task_1.py  task_1_test.py  task_2.py  task_2_test.py  test-db.tsv.bak
InformatikII/: CMakeLists.txt
InformatikII/Week1/: hello.c  main.c
InformatikII/Week2/: task1.c  task2.c  task3b__skeleton.c
InformatikII/Week3/: task1.c
InformatikII/Week4/: task4.c
InformatikII/Week5/: task1.c
InformatikII/Week6/: task3.c  task4.c
InformatikII/Week7/: task1.c
InformatikII/Week8/: bintree.c
InformatikII/Week9/: hash.c
InformatikUndWirtschaft/: quiz.py
